--- a/package.json
+++ b/package.json
@@ -166,8 +166,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "SourcePlayer",
+    "appId": "org.erb.SourcePlayer",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
