--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
   publish:
     # To enable auto publishing to github, update your electron publisher
     # config in package.json > "build" and remove the conditional below
-    if: ${{ github.repository_owner == 'source-player' }}
+    # if: ${{ github.repository_owner == 'source-player' }}
 
     runs-on: ${{ matrix.os }}
 
