--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
   publish:
     # To enable auto publishing to github, update your electron publisher
     # config in package.json > "build" and remove the conditional below
-    # if: ${{ github.repository_owner == 'source-player' }}
+    if: ${{ github.repository_owner == 'JorrinKievit' }}
 
     runs-on: ${{ matrix.os }}
 
@@ -43,4 +43,4 @@ jobs:
         run: |
           npm run postinstall
           npm run build
-          npm exec electron-builder -- --publish always --win --mac --linux
+          npm exec electron-builder -- --publish always --win --linux
