--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        os: [windows-latest]
+        # os: [macos-latest, windows-latest, ubuntu-latest]
 
     steps:
       - name: Check out Git repository
