--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout git repo
         uses: actions/checkout@v2.1.0
         with:
-          file-name: release/app/package.json
+          file-name: ./release/app/package.json
         
       - name: Check if version has been updated
         id: check
