--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "description": "A music player for source based games",
+  "version": "0.0.5",
   "license": "MIT",
   "author": {
     "name": "Jorrin Kievit",
